--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,5 @@ authors = ["Mikko Leppänen <mleppan23@gmail.com>"]
 
 [dependencies]
 anyhow = "1.0"
+collections_macros = "1.0.1"
 thiserror = "1.0"
